<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loadBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyList" />

    <Button
        android:id="@+id/loadBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loadBtn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/authorBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_background"
        android:padding="12dp"/>

    <Button
        android:id="@+id/authorBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/authorBtn"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_background"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:textSize="10dp"
        android:textAlignment="center"
        android:text="@string/author"
        android:textColor="@color/gray"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/emptyList"
        android:textColor="@color/gray"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/loadBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/loadBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>